--- a/abs.yaml
+++ b/abs.yaml
@@ -2,6 +2,11 @@
 # build_env_vars:
 #  ANACONDA_ROCKET_ENABLE_CUDA: 1
 
+# Increase timeout for CPU builds with GGML_CPU_ALL_VARIANTS=ON
+# which compiles 15 different CPU backend variants (x64 to sapphirerapids)
+# Default is 7200 seconds (2 hours), which is insufficient
+task_timeout: 14400  # 4 hours
+
 # How to build on dev instance:
 # Follow: https://github.com/anaconda/perseverance-skills/blob/main/sections/05_Tools/Accessing_dev_machine_instances.md#cuda-builds
 # On linux:
