Fix build timeout and add missing gguf dependency
  - Increase task_timeout to 4 hours for CPU variant builds
  - Add missing 'requests >=2.25' dependency to gguf package

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -351,6 +351,7 @@ outputs:
         - numpy >=1.17
         - tqdm >=4.27
         - pyyaml >=5.1
+        - requests >=2.25
         - sentencepiece >=0.1.98,<=0.2.0
       run_constrained:
         - pyside6 >=6.9,<7.0
