Add CUDA 13.0 and 13.1 build variants
Add cuda-13/13.0 and cuda-13/13.1 alongside existing cuda-12/12.8 in
conda_build_config.yaml. All dependencies (cuda-version, cuda-nvcc,
cuda-cudart-dev, libcublas-dev) are available on pkgs/main for all
platforms (linux-64, linux-aarch64, win-64).

Also remove duplicate cuda_compiler entry (already in aggregate CBC).

Requested for DGX Spark compatibility and GTC demo.

--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -27,6 +27,8 @@ gpu_variant:
   - none
   - metal                      # [osx]
   - cuda-12                    # [win or linux]
+  - cuda-13                    # [win or linux]
+  - cuda-13                    # [win or linux]
 
 # metal builds now require the MTLBuffer gpuAddress property, introduced in macOS 13.0
 # metal builds now require the MTLDataType.bfloat4 data type, introduced in macOS 14.0
@@ -37,9 +39,8 @@ OSX_SDK_VER:                   # [osx]
 cuda_compiler_version:         # [win or linux]
   - none                       # [win or linux]
   - 12.8                       # [win or linux]
-
-cuda_compiler:                 # [win or linux]
-- cuda-nvcc                    # [win or linux]
+  - 13.0                       # [win or linux]
+  - 13.1                       # [win or linux]
 
 zip_keys:                      # [win or linux]
   -                            # [win or linux]
